add route to change user pass
